# cpp-utils

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  license  readme.md  source_me.bash
lib/static-stl/: CMakeLists.txt  conandata.yml  conanfile.py
lib/static-stl/include/sstl/: assert.h
lib/static-stl/patches/: fb7a46c.patch
lib/static-stl/test_package/: CMakeLists.txt  conanfile.py
lib/static-stl/test_package/src/: test.cpp
src/: CMakeLists.txt
src/boost-sml/: CMakeLists.txt
src/boost-sml/include/boost/sml/utils/: events.hpp  states.hpp
src/boost-sml/include/boost/sml/utils/dsl/: sequence.hpp
src/boost-sml/include/boost/sml/utils/macros/: cleanup.hpp  events.hpp  states.hpp  transition_table.hpp
src/estd/: CMakeLists.txt
src/estd/bits/: CMakeLists.txt
src/estd/bits/include/estd/: bit.hpp  named_bitset.hpp
src/estd/bits/include/estd/bit/: bit.hpp
src/estd/concepts/: CMakeLists.txt
src/estd/concepts/include/estd/: concepts.hpp
src/estd/enum/: CMakeLists.txt
src/estd/enum/include/estd/: enum.hpp
src/estd/enum/include/estd/enum/impl/: enum.hpp
src/estd/miscellaneous/: CMakeLists.txt
src/estd/miscellaneous/include/estd/: aligned_storage.hpp  callback.hpp  printf_format.hpp  robber.hpp  static_print.hpp  tag.hpp  type_name.hpp  typename.hpp
src/estd/miscellaneous/include/estd/aligned_storage/impl/: aligned_storage.hpp
src/estd/miscellaneous/include/estd/callback/: callback.hpp
src/estd/miscellaneous/include/estd/printf_format/impl/: printf_format.hpp
src/estd/miscellaneous/include/estd/static_print/impl/: static_print.hpp
src/estd/miscellaneous/include/estd/typename/impl/: typename.hpp
src/estd/namedtuple/: CMakeLists.txt
src/estd/namedtuple/include/estd/: namedtuple.hpp
src/estd/namedtuple/include/estd/namedtuple/impl/: namedtuple.hpp
src/estd/pointers/: CMakeLists.txt
src/estd/pointers/include/estd/: pointers.hpp
src/estd/pointers/include/estd/pointers/impl/: pointers.hpp
src/estd/preprocessor/: CMakeLists.txt
src/estd/preprocessor/include/estd/preprocessor/: cat.hpp  cleanup.hpp  expand.hpp  foreach.hpp  if_constexpr.hpp  parens.hpp  va_opt_detect.hpp  variadic.hpp
src/estd/preprocessor/include/estd/preprocessor/cleanup/: cat.hpp  expand.hpp  foreach.hpp  if_constexpr.hpp  va_opt_detect.hpp  variadic.hpp
src/estd/result/: CMakeLists.txt
src/estd/result/include/estd/: result.hpp
src/estd/result/include/estd/result/: default_domain.hpp  domain_descriptor.hpp  result.hpp  result_code.hpp  status.hpp  status_code.hpp
src/estd/result/include/estd/result/impl/: default_domain.hpp  domain_descriptor.hpp  result.hpp  result_code.hpp  status.hpp  status_code.hpp  status_code_priv.hpp
src/estd/result/src/: default_domain_impl.cpp
src/estd/string/: CMakeLists.txt
src/estd/string/include/estd/: fixed_string.hpp
src/estd/string/include/estd/fixed_string/impl/: fixed_string_functions.hpp
src/estd/strings/: CMakeLists.txt
src/estd/strings/include/estd/: fixed_string.hpp  join.hpp
src/estd/strings/include/estd/fixed_string/: fixed_string_functions.hpp
src/estd/strings/include/estd/fixed_string/impl/: fixed_string.hpp  (+2 more)
src/estd/synchronisation/: CMakeLists.txt
src/estd/synchronisation/include/estd/: locks.hpp  synchronised_reference.hpp
src/estd/synchronisation/include/estd/locks/: locks.hpp
src/estd/synchronisation/include/estd/synchronised_reference/: synchronised_reference.hpp
src/estd/traits/: CMakeLists.txt
src/estd/traits/include/estd/: traits.hpp
src/estd/traits/include/estd/traits/: aggregate_size.hpp  callables.hpp  conversions.hpp  general.hpp  stl.hpp  templates.hpp
src/estl/: CMakeLists.txt
src/estl/circular_buffer/: CMakeLists.txt
src/estl/circular_buffer/include/estl/: circular_buffer.hpp
src/estl/include/estl/circullar_buffer/impl/: circullar_buffer.hpp
src/estl/namedtuple/: CMakeLists.txt
src/estl/namedtuple/include/estl/: namedtuple.hpp
src/lib-extensions/: CMakeLists.txt
src/lib-extensions/boost-sml/: CMakeLists.txt
src/lib-extensions/mp-units/: CMakeLists.txt
src/lib-extensions/mp-units/include/: units.hpp
src/lib-extensions/mp-units/include/units/: angle.hpp  angular_velocity.hpp  density.hpp  dimensionless.hpp  frequency.hpp  helpers.hpp  inductance.hpp  length_per_angle.hpp  moment_of_inertia.hpp  per_angle.hpp  power.hpp  prefixes.hpp  pulses.hpp  string.hpp  temperature.hpp  time.hpp  torque.hpp  voltage.hpp
src/numeric/: CMakeLists.txt
src/numeric/include/utils/numeric/: solvers.hpp
src/patterns/: CMakeLists.txt
src/patterns/cprt/: CMakeLists.txt
src/patterns/cprt/include/patterns/: cprt.hpp
src/patterns/include/patterns/cprt/impl/: cprt.hpp
src/units/: CMakeLists.txt
src/units/include/: units.hpp
src/units/include/units/: angle.hpp  angular_velocity.hpp  density.hpp  dimensionless.hpp  frequency.hpp  helpers.hpp  inductance.hpp  length_per_angle.hpp  moment_of_inertia.hpp  per_angle.hpp  power.hpp  prefixes.hpp  pulses.hpp  string.hpp  temperature.hpp  time.hpp  torque.hpp  voltage.hpp
src/units/include/units/helpers/impl/: helpers.hpp
src/units/include/units/string/impl/: string.hpp
src/units/include/units/time/impl/: time.hpp
src/utilities/: CMakeLists.txt
src/utilities/callback/: CMakeLists.txt
src/utilities/callback/include/: callback.hpp
src/utilities/callback/include/callback/impl/: callback.hpp  callback_priv.hpp
src/utilities/include/: callback.hpp
src/utilities/include/callback/impl/: callback_priv.hpp
src/utilities/numeric/: CMakeLists.txt
src/utilities/numeric/include/utils/numeric/: solvers.hpp
src/utilities/parseargs/: CMakeLists.txt
src/utilities/parseargs/include/: parseargs.hpp
src/utilities/parseargs/include/parseargs/: concepts.hpp  functions.hpp  traits.hpp
src/utilities/patterns/: CMakeLists.txt
src/utilities/patterns/crtp/: CMakeLists.txt
src/utilities/patterns/crtp/include/patterns/: crtp.hpp
tests/: CMakeLists.txt
tests/include/tests/: estd.hpp  estl.hpp  lib-extensions.hpp  main.hpp  utilities.hpp
tests/include/tests/estl/: namedtuple.hpp
tests/src/: main.cpp
(+105 files in other folders)
